<resources>
    <string name="app_name">BMI Analyzer</string>
    <string name="appName">BMI Analyzer</string>
    <string name="welcome_text">Welcome Back</string>
    <string name="if_login">If you already have an account, log in</string>
    <string name="Next">Next</string>
    <string name="create">Create New Account</string>
    <string name="if_do_not_have_account">If you do not already have an account</string>
    <string name="name">Name</string>
    <string name="Q_have_account">You have An Account ?</string>
    <string name="Q_do_not_have_account">You Do not Have An Account ?</string>
    <string name="Login">Login</string>
    <string name="LOGIN">LOGIN</string>
    <string name="E_Mail">E-Mail</string>
    <string name="Password">Password</string>
    <string name="signup">Sign Up</string>
    <string name="Button">Button</string>
    <string name="username">Username</string>
    <string name="Re_Password">Re-Password</string>
    <string name="text_complete">Complete Your Information</string>
    <string name="Gender">Gender</string>
    <string name="Weight">Weight</string>
    <string name="Male">Male</string>
    <string name="Female">Female</string>
    <string name="Save">Save Data</string>
    <string name="dateBirth">Date Of Birth</string>
    <string name="date">Date</string>
    <string name="cm">cm</string>
    <string name="Length">Length</string>
    <string name="Kg">Kg</string>
    <string name="minus">minus</string>
    <string name="plus">plus</string>
    <string name="newRecord">New Record</string>
    <string name="time">Time</string>
    <string name="previous">previous</string>
    <string name="createButton">Create</string>
    <string name="AddFood">Add Food Details</string>
    <string name="category">Category</string>
    <string name="calory">Calory</string>
    <string name="photo">Photo</string>
    <string name="cal">cal/g</string>
    <string name="uploadPhoto">Upload Photo</string>
    <string name="save">Save</string>
    <string name="hi">Hi, Mohammed</string>
    <string name="currentStatus">current Status</string>
    <string name="oldStatus">Old Status</string>
    <string name="dateD">20/1/2020</string>
    <string name="weight">60 Kg</string>
    <string name="normal">Normal</string>
    <string name="length">170 cm</string>
    <string name="logout">Logout</string>
    <string name="addFood">Add Food</string>
    <string name="addRecord">Add Record</string>
    <string name="viewFood">View Food</string>
    <string name="foodList">Food List</string>
    <string name="foodName">Salamon</string>
    <string name="foodType">Fish</string>
    <string name="caloryNum">22</string>
    <string name="cal_g">cal/g</string>
    <string name="edit">Edit</string>
    <string name="editFoodDetails">Edit Food Details</string>
    <string name="password_error" />
    <string name="name_error">Please enter your name</string>
</resources>