<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FoodList"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/Blue"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/imageButton"
            android:layout_width="50dp"
            android:layout_height="67dp"
            android:contentDescription="@string/category"
            android:translationX="0dp"
            android:translationY="0dp"
            app:srcCompat="@drawable/ic_baseline_arrow_white_24" />

        <TextView
            android:id="@+id/Registration_tittle"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:background="@color/Blue"
            android:text="@string/app_name"
            android:textColor="#FFFFFF"
            android:textSize="30sp"
            android:textStyle="bold"
            android:translationX="70dp"
            android:translationY="8dp" />

    </LinearLayout>

    <TextView
        android:id="@+id/textaddfood"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:fontFamily="sans-serif"
        android:text="@string/foodList"
        android:textColor="@color/Blue"
        android:textSize="42sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:id="@+id/foodListLayout"
        android:layout_width="300dp"
        android:layout_height="80dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/shape"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textaddfood">
        <ImageView
            android:layout_width="70dp"
            android:layout_height="80dp"
            android:background="@drawable/shape"/>
    <LinearLayout
        android:id="@+id/foodDetailsLayout"
        android:layout_width="wrap_content"
        android:layout_height="80dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/foodName"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="21dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/foodType"
            android:textColor="@color/dark_gray"
            android:textSize="17dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:text="@string/cal_g"
            android:textSize="17dp"
            android:textColor="@color/dark_gray"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/edit_cancelLayout"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:orientation="vertical"
        android:translationX="50dp">
        <Button
            android:id="@+id/edit"
            android:layout_width="70dp"
            android:layout_height="40dp"
            android:backgroundTint="@color/Blue"
            android:text="@string/edit"
            android:textColor="@color/white"
            android:textStyle="bold"/>
        <ImageView
            android:id="@+id/cancel"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:translationX="60dp"
            android:translationY="20dp"
            android:background="@color/Blue"
            android:textStyle="bold"
            app:srcCompat="@drawable/ic_baseline_close_24"/>
    </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>